[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/PlaySpace/PlaySpace.gd" type="Script" id=1]
[ext_resource path="res://src/EnergyCounter/EnergyCounter.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/EndTurn/EndTurn.tscn" type="PackedScene" id=3]

[sub_resource type="Curve" id=3]
min_value = -1.0
max_value = 0.0
_data = [ Vector2( 0, -1 ), 0.0, 2.0, 0, 1, Vector2( 0.5, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, -1 ), -2.0, 0.0, 1, 0 ]

[sub_resource type="Curve" id=4]
min_value = -1.0
_data = [ Vector2( 0, -1 ), 0.0, 2.0, 0, 1, Vector2( 1, 1 ), 2.0, 0.0, 1, 0 ]

[sub_resource type="Curve" id=5]
min_value = -1.0
_data = [ Vector2( 0, -1 ), 0.0, 4.81423, 0, 0, Vector2( 0.5, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 5.40909, 0.0, 0, 0 ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 960, 156 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 960, 368 )

[node name="PlaySpace" type="Node2D"]
script = ExtResource( 1 )
height_curve = SubResource( 3 )
spread_curve = SubResource( 4 )
rotation_curve = SubResource( 5 )

[node name="EndTurnButton" parent="." instance=ExtResource( 3 )]
visible = false
margin_left = 1680.0
margin_top = 872.0
margin_right = 1801.0
margin_bottom = 924.0

[node name="EnergyCounter" parent="." instance=ExtResource( 2 )]
margin_left = 16.0
margin_top = 896.0
margin_right = 56.0
margin_bottom = 936.0

[node name="Hand" type="Area2D" parent="."]
visible = false
position = Vector2( 8, 784 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hand"]
position = Vector2( 952, 140 )
shape = SubResource( 1 )

[node name="Board" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Board"]
position = Vector2( 960, 368 )
shape = SubResource( 2 )

[connection signal="area_entered" from="Board" to="." method="_on_Board_area_entered"]
[connection signal="area_exited" from="Board" to="." method="_on_Board_area_exited"]
